@@ -74,21 +74,21 @@ You can find links to these tutorials and other documentation files below.
 </li>
 <li><a href=LGPL>LGPL</a> - Gnu lesser general public license</li>
 <li><a href=logos.html>Logos</a> - Pygame Logos
-</li><br>&nbsp;<br><font size=+1><b>Tutorials / Introductions</b></font><br><li><a href=tut/ChimpLineByLine.html>ChimpLineByLine</a> - Line by Line Descriptions of the Chimp Example
+</li><br>&nbsp;<br><font size=+1><b>Tutorials / Introductions</b></font><br><li><a href=tut\ChimpLineByLine.html>ChimpLineByLine</a> - Line by Line Descriptions of the Chimp Example
 </li>
-<li><a href=tut/DisplayModes.html>DisplayModes</a> - Choosing and Configuring Display Modes
+<li><a href=tut\DisplayModes.html>DisplayModes</a> - Choosing and Configuring Display Modes
 </li>
-<li><a href=tut/Executable.html>Executable</a> - Creating a Standalone Windows Executable
+<li><a href=tut\Executable.html>Executable</a> - Creating a Standalone Windows Executable
 </li>
-<li><a href=tut/ImportInit.html>ImportInit</a> - Import and Initialize
+<li><a href=tut\ImportInit.html>ImportInit</a> - Import and Initialize
 </li>
-<li><a href=tut/MoveIt.html>MoveIt</a> - Help! How Do I Move An Image?
+<li><a href=tut\MoveIt.html>MoveIt</a> - Help! How Do I Move An Image?
 </li>
-<li><a href=tut/SpriteIntro.html>SpriteIntro</a> - Sprite Module Introduction
+<li><a href=tut\SpriteIntro.html>SpriteIntro</a> - Sprite Module Introduction
 </li>
-<li><a href=tut/SurfarrayIntro.html>SurfarrayIntro</a> - Introduction to the surfarray module
+<li><a href=tut\SurfarrayIntro.html>SurfarrayIntro</a> - Introduction to the surfarray module
 </li>
-<li><a href=tut/newbieguide.html>Newbieguide</a> - A Newbie Guide To Pygame
+<li><a href=tut\newbieguide.html>Newbieguide</a> - A Newbie Guide To Pygame
 </li>
 <br><hr><br><font size=+1><b>Full Index</b></font><ul>
 <!--FULLINDEX-->
